<resources>
    <string name="app_name">CEPNet</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="action_user">Users</string>
    <string name="action_chat">Messages</string>
    <string name="action_profile">Profile</string>

    <string name="fragment_user_title">User List</string>
    <string name="fragment_chat_title">Chat List</string>
    <string name="fragment_profile_title">Profile</string>

    <string name="chat_refresh">Refresh</string>
    <string name="title_activity_chat_interface">ChatInterfaceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>

    <string name="profile_name">Full Name</string>
    <string name="profile_email">Email</string>
    <string name="save_profile">Save Profile</string>
    <string name="title_activity_profile_view">ProfileViewActivity</string>
</resources>
