<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CoreActivity">

    <item
        android:id="@+id/action_user"
        android:title="@string/action_user"
        app:showAsAction="always"
    />

    <item
        android:id="@+id/action_chat"
        android:title="@string/action_chat"
        app:showAsAction="always"
    />

    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        app:showAsAction="always"
    />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"
    />
</menu>
