<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.xtan.cepnet.ProfileViewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:paddingBottom="8dp"
        android:text="@string/fragment_profile_title"
    />

    <ProgressBar
        android:id="@+id/profile_view_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:visibility="gone"
    />

    <TableLayout
        android:id="@+id/profile_view_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/profile_name"
                android:padding="8dp"
            />

            <TextView
                android:id="@+id/profile_view_name"
                android:padding="8dp"
                android:gravity="right"
                android:background="#00000000"
            />
        </TableRow>

        <View
            android:padding="6dp"
            android:layout_height="1dip"
            android:background="#FFD0D0D0"
        />

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/profile_email"
                android:padding="8dp"
            />

            <TextView
                android:id="@+id/profile_view_email"
                android:padding="8dp"
                android:gravity="right"
                android:background="#00000000"
            />
        </TableRow>

        <View
            android:padding="6dp"
            android:layout_height="1dip"
            android:background="#FFD0D0D0"
        />

    </TableLayout>

</LinearLayout>
